Analizador.2/.antlr/HydraParser.java
// Generated from /home/josed/Descargas/Proyecto/Analizador.2/Hydra.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class HydraParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		START=1, END=2, CLASS=3, INTERFACE=4, EXTENDS=5, IMPLEMENTS=6, NEW=7, 
		SELF=8, STATIC=9, PUBLIC=10, PRIVATE=11, PROTECTED=12, TRY=13, CATCH=14, 
		FINALLY=15, THROW=16, THROWS=17, INT=18, FLOAT=19, STRING=20, DOUBLE=21, 
		BOOL=22, CHAR=23, INPUT=24, OUTPUT=25, IMPORT=26, IF=27, ELSE=28, WHILE=29, 
		FOR=30, RETURN=31, TRUE=32, FALSE=33, BREAK=34, CONTINUE=35, CONST=36, 
		FUNCTION=37, CASE=38, SWITCH=39, DEFAULT=40, DO=41, REAL=42, NUMBER=43, 
		STRING_LITERAL=44, CHAR_LITERAL=45, EQ=46, NEQ=47, LE=48, GE=49, INCREMENT=50, 
		DECREMENT=51, PLUS_ASSIGN=52, MINUS_ASSIGN=53, MULT_ASSIGN=54, DIV_ASSIGN=55, 
		MOD_ASSIGN=56, GO=57, LT=58, GT=59, ASSIGN=60, PLUS=61, MINUS=62, MULT=63, 
		DIV=64, EXP=65, MOD=66, AND=67, OR=68, NOT=69, LPAREN=70, RPAREN=71, LBRACE=72, 
		RBRACE=73, LBRACKET=74, RBRACKET=75, SEMICOLON=76, COLON=77, COMMA=78, 
		DOT=79, CONSTID=80, IDENTIFIER=81, COMMENT=82, WS=83;
	public static final int
		RULE_programa = 0, RULE_importList = 1, RULE_importStatement = 2, RULE_cuerpo = 3, 
		RULE_elementocuerpo = 4, RULE_interfaceDefinicion = 5, RULE_interfaceMiembro = 6, 
		RULE_definicionClase = 7, RULE_miembro = 8, RULE_constructor = 9, RULE_accessModifier = 10, 
		RULE_funcion = 11, RULE_paramList = 12, RULE_parametro = 13, RULE_bloque = 14, 
		RULE_cuerpoGeneral = 15, RULE_declaracion = 16, RULE_declaratorList = 17, 
		RULE_declarator = 18, RULE_tipo = 19, RULE_arrayDimensions = 20, RULE_sentencia = 21, 
		RULE_tryStatement = 22, RULE_catchBlock = 23, RULE_finallyBlock = 24, 
		RULE_ioStatement = 25, RULE_ifStatement = 26, RULE_whileStatement = 27, 
		RULE_doWhileStatement = 28, RULE_switchStatement = 29, RULE_caseBlock = 30, 
		RULE_defaultBlock = 31, RULE_forStatement = 32, RULE_forInitDeclaracion = 33, 
		RULE_forInit = 34, RULE_forUpdate = 35, RULE_expression = 36, RULE_assignmentExpr = 37, 
		RULE_logicalOrExpr = 38, RULE_logicalAndExpr = 39, RULE_equalityExpr = 40, 
		RULE_relationalExpr = 41, RULE_additiveExpr = 42, RULE_multiplicativeExpr = 43, 
		RULE_exponentialExpr = 44, RULE_unaryExpr = 45, RULE_postfixExpr = 46, 
		RULE_primaryExpr = 47, RULE_arrayInitializer = 48, RULE_literal = 49, 
		RULE_expressionList = 50;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "importList", "importStatement", "cuerpo", "elementocuerpo", 
			"interfaceDefinicion", "interfaceMiembro", "definicionClase", "miembro", 
			"constructor", "accessModifier", "funcion", "paramList", "parametro", 
			"bloque", "cuerpoGeneral", "declaracion", "declaratorList", "declarator", 
			"tipo", "arrayDimensions", "sentencia", "tryStatement", "catchBlock", 
			"finallyBlock", "ioStatement", "ifStatement", "whileStatement", "doWhileStatement", 
			"switchStatement", "caseBlock", "defaultBlock", "forStatement", "forInitDeclaracion", 
			"forInit", "forUpdate", "expression", "assignmentExpr", "logicalOrExpr", 
			"logicalAndExpr", "equalityExpr", "relationalExpr", "additiveExpr", "multiplicativeExpr", 
			"exponentialExpr", "unaryExpr", "postfixExpr", "primaryExpr", "arrayInitializer", 
			"literal", "expressionList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'start'", "'end'", "'class'", "'interface'", "'extends'", "'implements'", 
			"'new'", "'self'", "'static'", "'public'", "'private'", "'protected'", 
			"'try'", "'catch'", "'finally'", "'throw'", "'throws'", "'int'", "'float'", 
			"'string'", "'double'", "'bool'", "'char'", "'input'", "'output'", "'import'", 
			"'if'", "'else'", "'while'", "'for'", "'return'", "'true'", "'false'", 
			"'break'", "'continue'", "'const'", "'ft'", "'case'", "'switch'", "'default'", 
			"'do'", null, null, null, null, "'=='", "'!='", "'<='", "'>='", "'++'", 
			"'--'", "'+='", "'-='", "'*='", "'/='", "'%='", "'->'", "'<'", "'>'", 
			"'='", "'+'", "'-'", "'*'", "'/'", "'^'", "'%'", "'&&'", "'||'", "'!'", 
			"'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "':'", "','", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "START", "END", "CLASS", "INTERFACE", "EXTENDS", "IMPLEMENTS", 
			"NEW", "SELF", "STATIC", "PUBLIC", "PRIVATE", "PROTECTED", "TRY", "CATCH", 
			"FINALLY", "THROW", "THROWS", "INT", "FLOAT", "STRING", "DOUBLE", "BOOL", 
			"CHAR", "INPUT", "OUTPUT", "IMPORT", "IF", "ELSE", "WHILE", "FOR", "RETURN", 
			"TRUE", "FALSE", "BREAK", "CONTINUE", "CONST", "FUNCTION", "CASE", "SWITCH", 
			"DEFAULT", "DO", "REAL", "NUMBER", "STRING_LITERAL", "CHAR_LITERAL", 
			"EQ", "NEQ", "LE", "GE", "INCREMENT", "DECREMENT", "PLUS_ASSIGN", "MINUS_ASSIGN", 
			"MULT_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "GO", "LT", "GT", "ASSIGN", 
			"PLUS", "MINUS", "MULT", "DIV", "EXP", "MOD", "AND", "OR", "NOT", "LPAREN", 
			"RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "SEMICOLON", "COLON", 
			"COMMA", "DOT", "CONSTID", "IDENTIFIER", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Hydra.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HydraParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode START() { return getToken(HydraParser.START, 0); }
		public CuerpoContext cuerpo() {
			return getRuleContext(CuerpoContext.class,0);
		}
		public TerminalNode END() { return getToken(HydraParser.END, 0); }
		public TerminalNode EOF() { return getToken(HydraParser.EOF, 0); }
		public ImportListContext importList() {
			return getRuleContext(ImportListContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IMPORT) {
				{
				setState(102);
				importList();
				}
			}

			setState(105);
			match(START);
			setState(106);
			cuerpo();
			setState(107);
			match(END);
			setState(108);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportListContext extends ParserRuleContext {
		public List<ImportStatementContext> importStatement() {
			return getRuleContexts(ImportStatementContext.class);
		}
		public ImportStatementContext importStatement(int i) {
			return getRuleContext(ImportStatementContext.class,i);
		}
		public ImportListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importList; }
	}

	public final ImportListContext importList() throws RecognitionException {
		ImportListContext _localctx = new ImportListContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(110);
				importStatement();
				}
				}
				setState(113); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IMPORT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatementContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(HydraParser.IMPORT, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(HydraParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(HydraParser.IDENTIFIER, i);
		}
		public TerminalNode DOT() { return getToken(HydraParser.DOT, 0); }
		public TerminalNode SEMICOLON() { return getToken(HydraParser.SEMICOLON, 0); }
		public ImportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatement; }
	}

	public final ImportStatementContext importStatement() throws RecognitionException {
		ImportStatementContext _localctx = new ImportStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(IMPORT);
			setState(116);
			match(IDENTIFIER);
			setState(117);
			match(DOT);
			setState(118);
			match(IDENTIFIER);
			setState(119);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CuerpoContext extends ParserRuleContext {
		public List<ElementocuerpoContext> elementocuerpo() {
			return getRuleContexts(ElementocuerpoContext.class);
		}
		public ElementocuerpoContext elementocuerpo(int i) {
			return getRuleContext(ElementocuerpoContext.class,i);
		}
		public CuerpoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuerpo; }
	}

	public final CuerpoContext cuerpo() throws RecognitionException {
		CuerpoContext _localctx = new CuerpoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cuerpo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4611755012446306200L) != 0) || ((((_la - 69)) & ~0x3f) == 0 && ((1L << (_la - 69)) & 6155L) != 0)) {
				{
				{
				setState(121);
				elementocuerpo();
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElementocuerpoContext extends ParserRuleContext {
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public FuncionContext funcion() {
			return getRuleContext(FuncionContext.class,0);
		}
		public SentenciaContext sentencia() {
			return getRuleContext(SentenciaContext.class,0);
		}
		public DefinicionClaseContext definicionClase() {
			return getRuleContext(DefinicionClaseContext.class,0);
		}
		public InterfaceDefinicionContext interfaceDefinicion() {
			return getRuleContext(InterfaceDefinicionContext.class,0);
		}
		public ElementocuerpoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elementocuerpo; }
	}

	public final ElementocuerpoContext elementocuerpo() throws RecognitionException {
		ElementocuerpoContext _localctx = new ElementocuerpoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_elementocuerpo);
		try {
			setState(132);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(127);
				declaracion();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(128);
				funcion();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(129);
				sentencia();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(130);
				definicionClase();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(131);
				interfaceDefinicion();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InterfaceDefinicionContext extends ParserRuleContext {
		public TerminalNode INTERFACE() { return getToken(HydraParser.INTERFACE, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(HydraParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(HydraParser.IDENTIFIER, i);
		}
		public TerminalNode LBRACE() { return getToken(HydraParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(HydraParser.RBRACE, 0); }
		public TerminalNode EXTENDS() { return getToken(HydraParser.EXTENDS, 0); }
		public List<InterfaceMiembroContext> interfaceMiembro() {
			return getRuleContexts(InterfaceMiembroContext.class);
		}
		public InterfaceMiembroContext interfaceMiembro(int i) {
			return getRuleContext(InterfaceMiembroContext.class,i);
		}
		public InterfaceDefinicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfaceDefinicion; }
	}

	public final InterfaceDefinicionContext interfaceDefinicion() throws RecognitionException {
		InterfaceDefinicionContext _localctx = new InterfaceDefinicionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_interfaceDefinicion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(INTERFACE);
			setState(135);
			match(IDENTIFIER);
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(136);
				match(EXTENDS);
				setState(137);
				match(IDENTIFIER);
				}
			}

			setState(140);
			match(LBRACE);
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 137438961152L) != 0)) {
				{
				{
				setState(141);
				interfaceMiembro();
				}
				}
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(147);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InterfaceMiembroContext extends ParserRuleContext {
		public FuncionContext funcion() {
			return getRuleContext(FuncionContext.class,0);
		}
		public InterfaceMiembroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfaceMiembro; }
	}

	public final InterfaceMiembroContext interfaceMiembro() throws RecognitionException {
		InterfaceMiembroContext _localctx = new InterfaceMiembroContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_interfaceMiembro);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			funcion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinicionClaseContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(HydraParser.CLASS, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(HydraParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(HydraParser.IDENTIFIER, i);
		}
		public TerminalNode LBRACE() { return getToken(HydraParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(HydraParser.RBRACE, 0); }
		public AccessModifierContext accessModifier() {
			return getRuleContext(AccessModifierContext.class,0);
		}
		public TerminalNode EXTENDS() { return getToken(HydraParser.EXTENDS, 0); }
		public TerminalNode IMPLEMENTS() { return getToken(HydraParser.IMPLEMENTS, 0); }
		public List<MiembroContext> miembro() {
			return getRuleContexts(MiembroContext.class);
		}
		public MiembroContext miembro(int i) {
			return getRuleContext(MiembroContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(HydraParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(HydraParser.COMMA, i);
		}
		public DefinicionClaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicionClase; }
	}

	public final DefinicionClaseContext definicionClase() throws RecognitionException {
		DefinicionClaseContext _localctx = new DefinicionClaseContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_definicionClase);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 7168L) != 0)) {
				{
				setState(151);
				accessModifier();
				}
			}

			setState(154);
			match(CLASS);
			setState(155);
			match(IDENTIFIER);
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(156);
				match(EXTENDS);
				setState(157);
				match(IDENTIFIER);
				}
			}

			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IMPLEMENTS) {
				{
				setState(160);
				match(IMPLEMENTS);
				setState(161);
				match(IDENTIFIER);
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(162);
					match(COMMA);
					setState(163);
					match(IDENTIFIER);
					}
					}
					setState(168);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(171);
			match(LBRACE);
			setState(175);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 206174952960L) != 0) || _la==IDENTIFIER) {
				{
				{
				setState(172);
				miembro();
				}
				}
				setState(177);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(178);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MiembroContext extends ParserRuleContext {
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public FuncionContext funcion() {
			return getRuleContext(FuncionContext.class,0);
		}
		public ConstructorContext constructor() {
			return getRuleContext(ConstructorContext.class,0);
		}
		public AccessModifierContext accessModifier() {
			return getRuleContext(AccessModifierContext.class,0);
		}
		public TerminalNode STATIC() { return getToken(HydraParser.STATIC, 0); }
		public MiembroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_miembro; }
	}

	public final MiembroContext miembro() throws RecognitionException {
		MiembroContext _localctx = new MiembroContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_miembro);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(180);
				accessModifier();
				}
				break;
			}
			setState(184);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				setState(183);
				match(STATIC);
				}
				break;
			}
			setState(189);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				setState(186);
				declaracion();
				}
				break;
			case 2:
				{
				setState(187);
				funcion();
				}
				break;
			case 3:
				{
				setState(188);
				constructor();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstructorContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(HydraParser.IDENTIFIER, 0); }
		public TerminalNode LPAREN() { return getToken(HydraParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(HydraParser.RPAREN, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public AccessModifierContext accessModifier() {
			return getRuleContext(AccessModifierContext.class,0);
		}
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public ConstructorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructor; }
	}
